k8s/service-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: demo-microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: <DOCKERHUB_REPO>/service-a:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: demo-microservices
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
