k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: demo-microservices
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: micro.local
      http:
        paths:
          - path: /service-a
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 5000
          - path: /service-b
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 5000
